# Huffman-Codec

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
data-structure/: CMakeLists.txt  HuffTree.cpp  HuffTree.hpp  MyList.cpp  MyList.h
decode/: CMakeLists.txt  decode.cpp  decode.h
doc/: essay.md  project2内容及要求.ppt
doc/diagram/: data-structure.drawio  decode.drawio  encode.drawio  file-process.drawio  main.drawio  statistics.drawio
encode/: CMakeLists.txt  encode.cpp  encode.h
file-process/: CMakeLists.txt  file-process.cpp  file-process.h
main/: CMakeLists.txt  main.cpp  main.h
statistics/: CMakeLists.txt  stat.cpp  statistics.cpp  statistics.h
